<resources>
    <string name="app_name">New York Times remastered</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">home</string>
    <string name="opinion">opinion</string>
    <string name="world">world</string>
    <string name="national">national</string>
    <string name="politics">politics</string>
    <string name="business">business</string>
    <string name="technology">technology</string>

</resources>
